--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "autoload": {
         "psr-0": {"SilexMobileDetect": "src/"}
     },
+    "minimum-stability": "stable",
     "repositories": [
     {
         "type": "vcs",
