--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     ],
     "require": {
         "silex/silex": "~1.1",
-        "mobiledetect/mobiledetectlib": "2.8.15"
+        "mobiledetect/mobiledetectlib": "^2.8"
     },
     "autoload": {
         "psr-0": {"SilexMobileDetect": "src/"}
