--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,9 @@
         }
     ],
     "require": {
-        "silex/silex": "~1.1",
-        "mobiledetect/mobiledetectlib": "^2.8"
+        "php": ">=5.3.0",
+        "silex/silex": "~1",
+        "mobiledetect/mobiledetectlib": "~2"
     },
     "autoload": {
         "psr-0": {"SilexMobileDetect": "src/"}
